[package]
name = "cic-dating-sim"
version = "0.1.0"
authors = ["anotherLostKitten <eggismagicchickensquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8"}
rand_core = "0.5.0"
rand_pcg = "0.2.1"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","gfx","mixer"]